// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Recover Password Controller Snapshot Test for OTP request exceeded 1`] = `
{
  "body": {
    "message": "OTP request limit exceeded. Please try again later.",
    "success": false,
  },
  "status": 429,
}
`;

exports[`Recover Password Controller Snapshot Test for database error 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Recover Password Controller Snapshot Test for email not verified (not expired) 1`] = `
{
  "body": {
    "message": "Please verify your email.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Recover Password Controller Snapshot Test for email not verified and expired 1`] = `
{
  "body": {
    "message": "User not found.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Recover Password Controller Snapshot Test for inactive user 1`] = `
{
  "body": {
    "message": "Your account is blocked. Please contact support.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Recover Password Controller Snapshot Test for missing usernameOrEmail 1`] = `
{
  "body": {
    "message": "Please provide a username or email.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Recover Password Controller Snapshot Test for successful recover password request 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullName": "Test User",
      "userId": "mocked-user-id",
    },
    "message": "Verification link sent to your email successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Recover Password Controller Snapshot Test for user not found 1`] = `
{
  "body": {
    "message": "User not found.",
    "success": false,
  },
  "status": 404,
}
`;
